add certificate api

--- a/DigitalSignature.Tests/DigitalSignatureService.Tests.csproj
+++ b/DigitalSignature.Tests/DigitalSignatureService.Tests.csproj
@@ -49,8 +49,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\CertificateUtilityTests.cs" />
     <Compile Include="PDFUtilityTests.cs" />
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
