--- a/DigitalSignature.Tests/DigitalSignatureService.Tests.csproj
+++ b/DigitalSignature.Tests/DigitalSignatureService.Tests.csproj
@@ -40,15 +40,18 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Abstractions" />
+    <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System.Web.Routing" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\PDFUtilityTests.cs" />
     <Compile Include="Core\CertificateUtilityTests.cs" />
     <Compile Include="Core\ContentManagerTests.cs" />
     <Compile Include="PDFUtilityTests.cs" />
