--- a/DigitalSignature.Tests/DigitalSignatureService.Tests.csproj
+++ b/DigitalSignature.Tests/DigitalSignatureService.Tests.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\PDFUtilityTests.cs" />
+    <Compile Include="Controllers\TemplateControllerTests.cs" />
     <Compile Include="Core\CertificateUtilityTests.cs" />
     <Compile Include="Core\ContentManagerTests.cs" />
     <Compile Include="PDFUtilityTests.cs" />
