--- a/DigitalSignature/packages.config
+++ b/DigitalSignature/packages.config
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Ghostscript.NET" version="1.2.0" targetFramework="net45" />
   <package id="iTextSharp" version="5.5.10" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.2" targetFramework="net461" />
-  <package id="Microsoft.Net.Compilers" version="2.0.0-beta5" targetFramework="net461" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.2-beta1" targetFramework="net461" />
 </packages>
